--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,44 +3,38 @@
 }
 
 html {
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
   color: #fff;
   background: linear-gradient(to right, #e55d87, #5fc3e4);
-  font-family: 'Roboto', sans-serif;
-  font-size: 18px;
 }
 
 .page-content {
-  width: 600px;
-  margin: 50px auto;
-}
-
-.heading {
-  text-align: center;
-  text-transform: uppercase;
-  font-size: 30px;
-  letter-spacing: 1.5px;
+  width: 640px;
+  margin: 40px auto 20px auto;
 }
 
 /* SEARCH BAR */
 
 .search-bar {
-  margin: 20px 0;
-  display: flex;
   position: relative;
+  display: flex;
+  margin-bottom: 20px;
 }
 
 .search-bar > * {
   height: 50px;
-  color: #fff;
   font-size: 18px;
-  background-color:rgba(255,255,255, 0.1);
+  font-family: 'Roboto', sans-serif;
+  color: #fff;
+  background-color:rgba(255,255,255, .1);
   border: 1px solid transparent;
   border-radius: 5px;
 }
 
 .search-bar > *:hover,
 .search-bar > *:focus {
-  background-color:rgba(255,255,255, 0.3);
+  background-color:rgba(255,255,255, .3);
 }
 
 .search-bar .btn-star {
@@ -50,28 +44,28 @@ html {
 
 .search-bar input[type="text"] {
   flex-grow: 1;
-  margin: 0 5px;
+  margin-right: 5px;
+  margin-left: 5px;
   padding-left: 10px;
-  font-family: 'Roboto', sans-serif;
+  outline: none;
 }
 
 .search-bar input[type="text"]::placeholder {
-  color: rgba(255,255,255, 0.4);
-  font-family: 'Roboto', sans-serif;
   font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  color: rgba(255,255,255, .4);
 }
 
 .search-bar .icon-search {
   position: absolute;
-  right: 70px;
   top: 15px;
+  right: 70px;
   background-color: transparent;
   pointer-events: none;
 }
 
 .search-bar select {
   width: 50px;
-  font-family: 'Roboto', sans-serif;
   cursor: pointer;
 }
 
@@ -79,7 +73,7 @@ html {
 
 .today-forecast.active {
   padding: 20px;
-  background-color:rgba(255,255,255, 0.1);
+  background-color:rgba(255,255,255, .1);
   border: 1px solid transparent;
   border-radius: 5px;
 }
@@ -88,8 +82,7 @@ html {
   margin-bottom: 20px;
   font-size: 36px;
   text-transform: uppercase;
-  overflow: scroll;
-  border-bottom: 1px solid rgba(255,255,255, 0.4);
+  border-bottom: 1px solid rgba(255,255,255, .4);
 }
 
 .today-forecast .container {
@@ -103,9 +96,9 @@ html {
 }
 
 .today-forecast .current-day {
+  margin-bottom: 20px;
   font-size: 24px;
   text-transform: uppercase;
-  margin-bottom: 20px;
 }
 
 .today-forecast .date {
@@ -142,10 +135,12 @@ html {
   font-size: 100px;
 }
 
+/* WEEK FORECAST */
+
 .week-forecast.active {
-  margin-top: 20px;
   display: flex;
-  background-color:rgba(255,255,255, 0.1);
+  margin-top: 20px;
+  background-color:rgba(255,255,255, .1);
   border: 1px solid transparent;
   border-radius: 5px;
 }
@@ -159,8 +154,8 @@ html {
 }
 
 .week-forecast .day-forecast:hover {
+  background-color:rgba(255,255,255, .3);
   cursor: pointer;
-  background-color:rgba(255,255,255, 0.3);
 }
 
 .week-forecast .day {
@@ -170,4 +165,52 @@ html {
 .week-forecast img {
   width: 50px;
   margin: 10px 0;
+}
+
+/* LISTS OF FAVORITE AND RECENTLY VIEWED */
+
+.lists {
+  display: flex;
+  width: 640px;
+  margin: 20px auto;
+  font-size: 14px;
+}
+
+.favorite,
+.recent {
+  display: none;
+}
+
+.favorite.active,
+.recent.active {
+  display: initial;
+  flex-basis: 320px;
+  flex-grow: 1;
+  margin-right: 10px;
+  padding: 10px;
+  background-color:rgba(255,255,255, .1);
+  border: 1px solid transparent;
+  border-radius: 5px;
+}
+
+.favorite.active  {
+  margin-right: 10px;
+}
+
+.lists h2 {
+  margin-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.lists li {
+  display: inline-block;
+  margin-right: 10px;
+  text-transform: lowercase;
+  list-style: none;
+}
+
+.lists li:hover {
+  color: rgba(255,255,255, 0.8);
+  border-bottom: 1px solid rgba(255,255,255, .8);
+  cursor: pointer;
 }
