--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,11 +2,22 @@
   box-sizing: border-box;
 }
 
+body::before {
+	content: '';
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	z-index: -1; 
+	background:#e55d87;
+	background: linear-gradient(to right, #e55d87, #5fc3e4);
+}
+
 html {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
   color: #fff;
-  background: linear-gradient(to right, #e55d87, #5fc3e4);
 }
 
 .page-content {
@@ -186,7 +197,6 @@ html {
   display: initial;
   flex-basis: 320px;
   flex-grow: 1;
-  margin-right: 10px;
   padding: 10px;
   background-color:rgba(255,255,255, .1);
   border: 1px solid transparent;
