--- a/src/css/style.css
+++ b/src/css/style.css
@@ -61,6 +61,10 @@ html {
   outline: none;
 }
 
+.search-bar.invalid input[type="text"] {
+  box-shadow: 0px 0px 10px 4px rgba(195,60,84, .4);
+}
+
 .search-bar input[type="text"]::placeholder {
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
