--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -20,9 +20,28 @@ html {
   color: #fff;
 }
 
-.page-content {
+#root {
   width: 640px;
-  margin: 40px auto 20px auto;
+  margin: 0 auto;
+}
+
+.page-content {
+  margin: 50px auto 20px auto;
+}
+
+.error {
+  position: absolute;
+  top: 10px;
+  width: 640px;
+  height: 30px;
+  color: rgb(195,60,84);
+  border: 1px solid transparent;
+  border-radius: 5px;
+  line-height: 30px;
+  font-size: 18px;
+  font-family: 'Roboto', sans-serif;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 /* SEARCH BAR */
@@ -197,7 +216,6 @@ html {
 
 .lists {
   display: flex;
-  width: 640px;
   margin: 20px auto;
   font-size: 14px;
 }
